# Forma

./: CMakeLists.txt  LICENSE.txt  README  build.sh  build_experiments.sh  build_test.sh  c_header.c  cuda_header.cu  llvm_helper.cpp
ctests/: CMakeLists.txt  bdy_clamped.cpp  bdy_clamped.idsl  bdy_constant.cpp  bdy_constant.idsl  bdy_mirror.cpp  bdy_mirror.idsl  bdy_wrap.cpp  bdy_wrap.idsl  blur.idsl  blur_clamped.idsl  blur_double.cpp  blur_double.idsl  blur_float.cpp  blur_float.idsl  blur_int.cpp  blur_int.idsl  blur_int16.cpp  blur_int16.idsl  blur_int8.cpp  blur_int8.idsl  blur_mirror.cpp  blur_mirror.idsl  blur_wrap.idsl  canny.cpp  canny.idsl  canny_float.idsl  canny_mirror.cpp  canny_mirror.idsl  compose.cpp  compose.idsl  downsample.cpp  downsample.idsl  downsample_mirror.cpp  downsample_mirror.idsl  extrapolate.cpp  extrapolate.idsl  getmax.cpp  getmax.idsl  hdr_direct.cpp  (+43 more)
experiments/: CMakeLists.txt  try.sh
experiments/blur/: CMakeLists.txt  blur.idsl  blur_gold.cpp  driver.cpp  driver_gpu.cpp
experiments/camera_pipe/: CMakeLists.txt  camera_pipe.idsl  driver.cpp  driver_gpu.cpp
experiments/canny/: CMakeLists.txt  canny.idsl  canny_gold.cpp  driver.cpp  driver_gpu.cpp
experiments/emboss/: CMakeLists.txt  driver.cpp  driver_gpu.cpp  emboss.idsl  emboss_gold.cpp
experiments/hdr_direct/: CMakeLists.txt  driver.cpp  driver_gpu.cpp  hdr_direct.idsl  hdr_direct_gold.cpp
experiments/hdr_pyramid/: CMakeLists.txt  driver.cpp  driver_gpu.cpp  hdr_pyramid.idsl
experiments/pyramid/: CMakeLists.txt  driver.cpp  driver_gpu.cpp  pyramid.idsl
experiments/pyramid_mirror/: CMakeLists.txt  driver.cpp  driver_gpu.cpp  pyramid_mirror.idsl
experiments/pyramid_rgb/: CMakeLists.txt  driver.cpp  driver_gpu.cpp  pyramid_rgb.idsl
experiments/pyramid_rgb_mirror/: CMakeLists.txt  driver.cpp  driver_gpu.cpp  pyramid_rgb_mirror.idsl
include/: CMakeLists.txt  program_opts.hpp
include/AST/: CMakeLists.txt  data_types.hpp  domain.hpp  fn_defn.hpp  local_scalars.hpp  parametric.hpp  parser.hpp  pretty_print.hpp  stencil_expr.hpp  symbol_table.hpp  vector_defn.hpp  vector_expr.hpp  vector_stmt.hpp
include/ASTVisitor/: CMakeLists.txt  convert_boundaries.hpp  copy_stencil_expr.hpp  copy_visitor.hpp  forward_expr.hpp  inline_vectorfn.hpp  stencil_visitor.hpp  unroll.hpp  visitor.hpp
include/CodeGen/: CMakeLists.txt  CodeGen.hpp  print_C.hpp  print_CUDA.hpp  print_LLVM.hpp  print_dot.hpp
include/CodeGen/LLVM/: CGFunction.h  CGModule.h  CGStencilFn.h
src/: CMakeLists.txt  main.cpp  program_opts.cpp
src/AST/: CMakeLists.txt  data_types.cpp  domain.cpp  fn_defn.cpp  parametric.cpp  parser.y  pretty_print.cpp  print_node.cpp  stencil_expr.cpp  symbol_table.cpp  tokenize.lex  vector_expr.cpp
src/ASTVisitor/: CMakeLists.txt  convert_boundaries.cpp  copy_visitor.cpp  stencil_visitor.cpp
src/CodeGen/: CMakeLists.txt  CodeGen.cpp  print_C.cpp  print_CUDA.cpp  print_dot.cpp
src/CodeGen/LLVM/: CGExpr.cpp  CGFunction.cpp  CGModule.cpp  CGStencilFn.cpp
